<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include layout="@layout/toolbar_add_routine" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:stretchColumns="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="16dp"
                android:paddingEnd="4dp"
                android:paddingBottom="16dp"
                android:text="@string/basic_information"
                android:textColor="@color/colorGrayLight"
                android:textSize="12sp" />

            <RelativeLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="24dp"
                    android:background="@drawable/background_gradient_circle"
                    android:contentDescription="@string/routine_icon"
                    android:padding="20dp"
                    android:src="@drawable/ic_menu" />
            </RelativeLayout>


            <com.tamimattafi.myscheduler.app.ui.custom.views.FormInputLayout android:id="@+id/nameLayout">

                <com.tamimattafi.myscheduler.app.ui.custom.views.FormEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="14sp" />
            </com.tamimattafi.myscheduler.app.ui.custom.views.FormInputLayout>


            <com.tamimattafi.myscheduler.app.ui.custom.views.FormInputLayout>

                <com.tamimattafi.myscheduler.app.ui.custom.views.FormEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:minHeight="120dp"
                    android:textSize="14sp" />
            </com.tamimattafi.myscheduler.app.ui.custom.views.FormInputLayout>

            <View android:layout_margin="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="16dp"
                android:paddingEnd="4dp"
                android:paddingBottom="16dp"
                android:text="@string/advanced_details"
                android:textColor="@color/colorGrayLight"
                android:textSize="12sp" />

            <com.tamimattafi.myscheduler.app.ui.custom.views.FormInputLayout
                android:id="@+id/importanceLayout"
                android:layout_marginBottom="8dp"
                app:startIconDrawable="@drawable/ic_drop_down">

                <com.tamimattafi.myscheduler.app.ui.custom.views.FormEditText
                    android:id="@+id/importance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/importance"
                    android:textSize="14sp" />
            </com.tamimattafi.myscheduler.app.ui.custom.views.FormInputLayout>

            <com.tamimattafi.myscheduler.app.ui.custom.views.FormInputLayout
                android:id="@+id/startDayLayout"
                app:startIconDrawable="@drawable/ic_drop_down">

                <com.tamimattafi.myscheduler.app.ui.custom.views.FormEditText
                    android:id="@+id/startDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/start_day"
                    android:textSize="14sp" />
            </com.tamimattafi.myscheduler.app.ui.custom.views.FormInputLayout>


            <View android:layout_margin="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/number_of_days" />

            <RelativeLayout>


                <com.tamimattafi.myscheduler.app.ui.custom.views.SimpleSeekBar
                    android:id="@+id/daysSeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/days"
                    android:layout_toLeftOf="@id/days"
                    android:max="@integer/max_days"
                    android:progress="@integer/min_days"
                    android:progressDrawable="@drawable/progress_bar_color"
                    android:thumb="@drawable/seek_bar_thumb_white" />

                <TextView
                    android:id="@+id/days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:background="@drawable/background_gradient_circle"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/colorForeground"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View android:layout_margin="36dp" />

            <LinearLayout android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel"
                    style="@style/MaterialTextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="@color/colorGrayLight"
                    app:icon="@drawable/ic_cancel"
                    app:iconGravity="textStart"
                    app:iconTint="@color/colorGrayLight" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    style="@style/MaterialButtonPrimaryDarkLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    app:icon="@drawable/ic_save"
                    app:iconGravity="textStart" />

            </LinearLayout>

        </TableLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>